--- a/style.css
+++ b/style.css
@@ -221,6 +221,20 @@ text-indent: 0px;
 
 }
 
+.dblarrow {
+
+    list-style-type:">> ";
+    
+    margin-top: 0px;
+    
+    margin-left: 15px;
+    
+    padding-left: 0px;
+    
+    text-indent: 0px;
+    
+    }
+
 
 
 #content {
